Fix:
- unchecked cast in SelectMenuItem
- possible heap pollution in SelectMenu
- serialVersionUID in ExitException
- Throwable -> Exception